--- a/arch/arm64/configs/coderastic_defconfig
+++ b/arch/arm64/configs/coderastic_defconfig
@@ -5665,3 +5665,7 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_SBITMAP=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
+
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
