--- a/arch/arm64/configs/coderastic_defconfig
+++ b/arch/arm64/configs/coderastic_defconfig
@@ -5669,3 +5669,4 @@ CONFIG_QMI_ENCDEC=y
 
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
+CONFIG_KLAPSE=y
